--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,23 +24,23 @@
   --white_a8: hsla(0, 0%, 100%, 0.08);
   --white_a12: hsla(0, 0%, 100%, 0.12);
   --cultured: hsla(220, 20%, 97%, 1);
-  --snow: hsla(345, 57%, 97%, 1);
+  --snow:  #c053011f;
   --manatee: hsla(219, 10%, 62%, 1);
   --black-coral: hsla(220, 12%, 43%, 1);
   --cadet-blue-crayola_a20: hsla(222, 23%, 71%, 0.2);
-  --cinnamon-satin: hsla(344, 53%, 62%, 1);
+  --cinnamon-satin: hsl(25.76,98.96%,37.84%);
   --raisin-black: hsla(216, 14%, 14%, 1);
   --raisin-black_a6: hsla(216, 14%, 14%, 0.06);
   --gunmetal: hsla(214, 15%, 21%, 1);
   --charcoal: hsla(219, 22%, 26%, 1);
-  
+
   /**
   * typography
   */
 
   --blob-radius: 52% 48% 59% 41% / 53% 40% 60% 47%;
   --z-tooltip: 10;
-  
+
   --ff-manrope: 'Manrope', sans-serif;
 
   --fs-1: calc(2.7rem + 1.38vw);
@@ -51,7 +51,7 @@
   --fs-6: 1.7rem;
   --fs-7: 1.5rem;
   --fs-8: 1.4rem;
-  
+
   --fw-700: 700;
 
   /**
@@ -102,20 +102,26 @@
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
 a,
 img,
 span,
 button,
-ion-icon { display: block; }
+ion-icon {
+  display: block;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-img { height: auto; }
+img {
+  height: auto;
+}
 
 input,
 button,
@@ -126,11 +132,17 @@ textarea {
 }
 
 input,
-textarea { width: 100%; }
+textarea {
+  width: 100%;
+}
 
-button { cursor: pointer; }
+button {
+  cursor: pointer;
+}
 
-ion-icon { pointer-events: none; }
+ion-icon {
+  pointer-events: none;
+}
 
 html {
   font-family: var(--ff-manrope);
@@ -145,15 +157,25 @@ body {
   line-height: 1.7;
 }
 
-body.nav-active { overflow: hidden; }
+body.nav-active {
+  overflow: hidden;
+}
 
-::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-::-webkit-scrollbar-track { background-color: hsl(0, 0%, 98%); }
+::-webkit-scrollbar-track {
+  background-color: hsl(0, 0%, 98%);
+}
 
-::-webkit-scrollbar-thumb { background-color: hsl(0, 0%, 80%); }
+::-webkit-scrollbar-thumb {
+  background-color: hsl(0, 0%, 80%);
+}
 
-::-webkit-scrollbar-thumb:hover { background-color: hsl(0, 0%, 70%); }
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(0, 0%, 70%);
+}
 
 
 
@@ -163,7 +185,9 @@ body.nav-active { overflow: hidden; }
   #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 16px; }
+.container {
+  padding-inline: 16px;
+}
 
 .social-list {
   display: flex;
@@ -176,11 +200,17 @@ body.nav-active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.social-link:is(:hover, :focus-visible) { transform: translateY(-3px); }
+.social-link:is(:hover, :focus-visible) {
+  transform: translateY(-3px);
+}
 
-.section { padding-block: var(--section-padding); }
+.section {
+  padding-block: var(--section-padding);
+}
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 100%;
+}
 
 .h1,
 .h2,
@@ -190,13 +220,21 @@ body.nav-active { overflow: hidden; }
   line-height: 1.3;
 }
 
-.h1 { font-size: var(--fs-1); }
+.h1 {
+  font-size: var(--fs-1);
+}
 
-.h2 { font-size: var(--fs-2); }
+.h2 {
+  font-size: var(--fs-2);
+}
 
-.h3 { font-size: var(--fs-3); }
+.h3 {
+  font-size: var(--fs-3);
+}
 
-.h4 { font-size: var(--fs-4); }
+.h4 {
+  font-size: var(--fs-4);
+}
 
 .btn {
   color: var(--cinnamon-satin);
@@ -210,7 +248,9 @@ body.nav-active { overflow: hidden; }
   will-change: transform;
 }
 
-.btn:is(:hover, :focus-visible) { transform: translateY(-4px); }
+.btn:is(:hover, :focus-visible) {
+  transform: translateY(-4px);
+}
 
 .btn-primary,
 .btn-secondary:is(:hover, :focus-visible) {
@@ -218,9 +258,13 @@ body.nav-active { overflow: hidden; }
   color: var(--white);
 }
 
-.section-text { font-size: var(--fs-5); }
+.section-text {
+  font-size: var(--fs-5);
+}
 
-.section-title { margin-block-end: 16px; }
+.section-title {
+  margin-block-end: 16px;
+}
 
 .grid-list {
   display: grid;
@@ -232,13 +276,21 @@ body.nav-active { overflow: hidden; }
   transition: 0.75s ease;
 }
 
-[data-reveal="top"] { transform: translateY(-30px); }
+[data-reveal="top"] {
+  transform: translateY(-30px);
+}
 
-[data-reveal="bottom"] { transform: translateY(30px); }
+[data-reveal="bottom"] {
+  transform: translateY(30px);
+}
 
-[data-reveal="left"] { transform: translateX(-30px); }
+[data-reveal="left"] {
+  transform: translateX(-30px);
+}
 
-[data-reveal="right"] { transform: translateX(30px); }
+[data-reveal="right"] {
+  transform: translateX(30px);
+}
 
 [data-reveal].revealed {
   transform: translate(0);
@@ -270,8 +322,13 @@ body.nav-active { overflow: hidden; }
 }
 
 @keyframes slideIn {
-  0% { transform: translateY(-100%); }
-  100% { transform: translateY(0); }
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .header .container {
@@ -324,20 +381,30 @@ body.nav-active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.nav-close-btn ion-icon { --ionicon-stroke-width: 50px; }
+.nav-close-btn ion-icon {
+  --ionicon-stroke-width: 50px;
+}
 
-.nav-close-btn:is(:hover, :focus-visible) { background-color: var(--white_a12); }
+.nav-close-btn:is(:hover, :focus-visible) {
+  background-color: var(--white_a12);
+}
 
-.navbar-list { margin-block-end: auto; }
+.navbar-list {
+  margin-block-end: auto;
+}
 
 .navbar-link {
   font-weight: var(--fw-700);
   padding-block: 6px;
 }
 
-.contact-link { transition: var(--transition-1); }
+.contact-link {
+  transition: var(--transition-1);
+}
 
-.contact-link:is(:hover, :focus-visible) { color: var(--cinnamon-satin); }
+.contact-link:is(:hover, :focus-visible) {
+  color: var(--cinnamon-satin);
+}
 
 .overlay {
   position: fixed;
@@ -393,9 +460,13 @@ body.nav-active { overflow: hidden; }
   filter: drop-shadow(var(--shadow-2));
 }
 
-.hero-content { text-align: center; }
+.hero-content {
+  text-align: center;
+}
 
-.hero .section-text { margin-block: 24px 36px; }
+.hero .section-text {
+  margin-block: 24px 36px;
+}
 
 .btn-wrapper {
   display: flex;
@@ -426,7 +497,9 @@ body.nav-active { overflow: hidden; }
   margin-block-end: 4px;
 }
 
-.progress-item:not(:last-child) { margin-block-end: 16px; }
+.progress-item:not(:last-child) {
+  margin-block-end: 16px;
+}
 
 .progress {
   background-color: var(--raisin-black_a6);
@@ -436,16 +509,22 @@ body.nav-active { overflow: hidden; }
   overflow: hidden;
 }
 
-.progress-fill { height: inherit; }
+.progress-fill {
+  height: inherit;
+}
 
-.about-card { text-align: center; }
+.about-card {
+  text-align: center;
+}
 
 .about-card .card-icon {
   max-width: max-content;
   margin-inline: auto;
 }
 
-.about-card .card-title { margin-block: 16px 10px; }
+.about-card .card-title {
+  margin-block: 16px 10px;
+}
 
 
 
@@ -455,13 +534,21 @@ body.nav-active { overflow: hidden; }
   #PROJECTS
 \*-----------------------------------*/
 
-.project { border-block: 1px solid var(--cadet-blue-crayola_a20); }
+.project {
+  border-block: 1px solid var(--cadet-blue-crayola_a20);
+}
 
-.project .title-wrapper { margin-block-end: 40px; }
+.project .title-wrapper {
+  margin-block-end: 40px;
+}
 
-.project .btn { margin-block-start: 24px; }
+.project .btn {
+  margin-block-start: 24px;
+}
 
-.project .grid-list { gap: 40px; }
+.project .grid-list {
+  gap: 40px;
+}
 
 .project-card {
   --padding: 24px;
@@ -475,11 +562,17 @@ body.nav-active { overflow: hidden; }
 
 .project-card-1,
 .project-card-2,
-:is(.project-card-3, .project-card-4) .card-content { padding: var(--padding); }
+:is(.project-card-3, .project-card-4) .card-content {
+  padding: var(--padding);
+}
 
-.project-card-1 { padding-block-end: 0; }
+.project-card-1 {
+  padding-block-end: 0;
+}
 
-.project :is(.project-card-3, .project-card-4) { gap: 0; }
+.project :is(.project-card-3, .project-card-4) {
+  gap: 0;
+}
 
 .project-card .card-tag {
   font-size: var(--fs-8);
@@ -487,9 +580,13 @@ body.nav-active { overflow: hidden; }
   text-transform: uppercase;
 }
 
-.project-card .card-title { margin-block: 16px; }
+.project-card .card-title {
+  margin-block: 16px;
+}
 
-.project-card .card-text { margin-block-end: 20px; }
+.project-card .card-text {
+  margin-block-end: 20px;
+}
 
 .project-card .btn-text {
   display: flex;
@@ -499,7 +596,9 @@ body.nav-active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.project-card .btn-text:is(:hover, :focus-visible) { gap: 10px; }
+.project-card .btn-text:is(:hover, :focus-visible) {
+  gap: 10px;
+}
 
 
 
@@ -509,7 +608,9 @@ body.nav-active { overflow: hidden; }
   #CONTACT
 \*-----------------------------------*/
 
-.contact { padding-block-end: 0; }
+.contact {
+  padding-block-end: 0;
+}
 
 .contact-card {
   background-color: var(--snow);
@@ -519,7 +620,9 @@ body.nav-active { overflow: hidden; }
   gap: 40px;
 }
 
-.contact .section-title { margin-block-start: 20px; }
+.contact .section-title {
+  margin-block-start: 20px;
+}
 
 .input-field {
   background-color: var(--white);
@@ -531,7 +634,9 @@ body.nav-active { overflow: hidden; }
   margin-block-end: 20px;
 }
 
-.input-field::placeholder { color: var(--manatee); }
+.input-field::placeholder {
+  color: var(--manatee);
+}
 
 textarea.input-field {
   min-height: 120px;
@@ -548,11 +653,17 @@ textarea.input-field {
   #FOOTER
 \*-----------------------------------*/
 
-.footer { padding-block: 40px; }
+.footer {
+  padding-block: 40px;
+}
 
-.copyright { margin-block-end: 12px; }
+.copyright {
+  margin-block-end: 12px;
+}
 
-.footer .social-link { color: var(--charcoal); }
+.footer .social-link {
+  color: var(--charcoal);
+}
 
 
 
@@ -599,6 +710,17 @@ textarea.input-field {
  * responsive for large than 575px screen
  */
 
+@media (min-width: 300px) {
+  .footer .copyright {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer .social-list {
+    justify-content: center;
+  }
+}
+
 @media (min-width: 575px) {
 
   /**
@@ -617,7 +739,9 @@ textarea.input-field {
    * PROJECT
    */
 
-  .project-card { --padding: 68px; }
+  .project-card {
+    --padding: 68px;
+  }
 
 
 
@@ -625,7 +749,9 @@ textarea.input-field {
    * CONTACT
    */
 
-  .contact-card { padding: 68px; }
+  .contact-card {
+    padding: 68px;
+  }
 
 }
 
@@ -643,9 +769,13 @@ textarea.input-field {
    * REUSED STYLE
    */
 
-  .container { max-width: 720px; }
+  .container {
+    max-width: 720px;
+  }
 
-  .section-text { --fs-5: 2rem; }
+  .section-text {
+    --fs-5: 2rem;
+  }
 
 
 
@@ -653,7 +783,9 @@ textarea.input-field {
    * ABOUT
    */
 
-  .about .grid-list { grid-template-columns: 1fr 1fr; }
+  .about .grid-list {
+    grid-template-columns: 1fr 1fr;
+  }
 
 
 
@@ -668,7 +800,9 @@ textarea.input-field {
     gap: 30px;
   }
 
-  .project .btn { min-width: max-content; }
+  .project .btn {
+    min-width: max-content;
+  }
 
 
 
@@ -676,7 +810,9 @@ textarea.input-field {
    * CONTACT
    */
 
-  .contact .section-text { --fs-5: 1.8rem; }
+  .contact .section-text {
+    --fs-5: 1.8rem;
+  }
 
   .input-wrapper {
     display: flex;
@@ -696,7 +832,9 @@ textarea.input-field {
     align-items: center;
   }
 
-  .copyright { margin-block-end: 0; }
+  .copyright {
+    margin-block-end: 0;
+  }
 
 }
 
@@ -730,7 +868,9 @@ textarea.input-field {
    * REUSED STYLE
    */
 
-  .container { max-width: 960px; }
+  .container {
+    max-width: 960px;
+  }
 
 
 
@@ -741,7 +881,9 @@ textarea.input-field {
   .nav-open-btn,
   .navbar-top,
   .navbar .wrapper,
-  .overlay { display: none; }
+  .overlay {
+    display: none;
+  }
 
   .navbar,
   .navbar.active {
@@ -761,7 +903,9 @@ textarea.input-field {
     transition: var(--transition-1);
   }
 
-  .navbar-link:is(:hover, :focus-visible) { color: var(--cinnamon-satin); }
+  .navbar-link:is(:hover, :focus-visible) {
+    color: var(--cinnamon-satin);
+  }
 
   .navbar .social-link {
     color: var(--charcoal);
@@ -790,7 +934,9 @@ textarea.input-field {
    * HERO
    */
 
-  .hero { padding-block-start: calc(var(--section-padding) + 80px); }
+  .hero {
+    padding-block-start: calc(var(--section-padding) + 80px);
+  }
 
   .hero .container {
     grid-template-columns: 0.8fr 1fr;
@@ -798,9 +944,13 @@ textarea.input-field {
     gap: 100px;
   }
 
-  .hero-content { text-align: left; }
+  .hero-content {
+    text-align: left;
+  }
 
-  .hero .btn-wrapper { justify-content: flex-start; }
+  .hero .btn-wrapper {
+    justify-content: flex-start;
+  }
 
 
 
@@ -813,7 +963,9 @@ textarea.input-field {
     align-items: center;
   }
 
-  .about .grid-list { grid-template-columns: repeat(4, 1fr); }
+  .about .grid-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
 
 
@@ -826,7 +978,9 @@ textarea.input-field {
     row-gap: 50px;
   }
 
-  .project .grid-list > li:nth-child(-n+2) { grid-column: 1 / 3; }
+  .project .grid-list>li:nth-child(-n+2) {
+    grid-column: 1 / 3;
+  }
 
   .project-card-1,
   .project-card-2 {
@@ -834,13 +988,21 @@ textarea.input-field {
     align-items: flex-end;
   }
 
-  :is(.project-card-1, .project-card-2) .card-content { width: 33.33%; }
+  :is(.project-card-1, .project-card-2) .card-content {
+    width: 33.33%;
+  }
 
-  :is(.project-card-1, .project-card-2) .card-banner { width: 66.66%; }
+  :is(.project-card-1, .project-card-2) .card-banner {
+    width: 66.66%;
+  }
 
-  .project-card-1 .card-content { padding-block-end: var(--padding); }
+  .project-card-1 .card-content {
+    padding-block-end: var(--padding);
+  }
 
-  .project-card-2 .card-content { order: 1; }
+  .project-card-2 .card-content {
+    order: 1;
+  }
 
 
 
@@ -871,7 +1033,9 @@ textarea.input-field {
    */
 
   .container,
-  .header { max-width: 1140px; }
+  .header {
+    max-width: 1140px;
+  }
 
 
 
@@ -879,7 +1043,9 @@ textarea.input-field {
    * ABOUT
    */
 
-  .about .grid-list { gap: 50px; }
+  .about .grid-list {
+    gap: 50px;
+  }
 
 
 
@@ -887,7 +1053,9 @@ textarea.input-field {
    * CONTACT
    */
 
-  .contact-card { gap: 150px; }
+  .contact-card {
+    gap: 150px;
+  }
 
 }
 
@@ -906,7 +1074,9 @@ textarea.input-field {
    */
 
   .container,
-  .header { max-width: 1320px; }
+  .header {
+    max-width: 1320px;
+  }
 
 
 
@@ -914,9 +1084,13 @@ textarea.input-field {
    * HERO
    */
 
-  .hero .container { grid-template-columns: 1fr 0.8fr; }
+  .hero .container {
+    grid-template-columns: 1fr 0.8fr;
+  }
 
-  .hero .section-text { --fs-5: 2.4rem; }
+  .hero .section-text {
+    --fs-5: 2.4rem;
+  }
 
 
 
@@ -924,8 +1098,12 @@ textarea.input-field {
    * ABOUT
    */
 
-  .about .wrapper { gap: 100px; }
+  .about .wrapper {
+    gap: 100px;
+  }
 
-  .about .grid-list { gap: 60px; }
+  .about .grid-list {
+    gap: 60px;
+  }
 
 }
