--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@
   --white_a8: hsla(0, 0%, 100%, 0.08);
   --white_a12: hsla(0, 0%, 100%, 0.12);
   --cultured: hsla(220, 20%, 97%, 1);
-  --snow:  #c053011f;
+  --snow:  hsl(26deg 99% 38% / 13%);
   --manatee: hsla(219, 10%, 62%, 1);
   --black-coral: hsla(220, 12%, 43%, 1);
   --cadet-blue-crayola_a20: hsla(222, 23%, 71%, 0.2);
