--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*-----------------------------------*\
+/*-----------------------------------*\see 
   #main.css
 \*-----------------------------------*/
 
